# llama2-webui

./: .env  .env.7b_8bit_example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  benchmark.py  code_completion.py  model.py  pyproject.toml  read1.txt  requirements.txt  requirements_windows.txt
.github/workflows/: branch.yml  release.yml
colab/: Llama_2_7b_Chat_GPTQ.ipynb  ggmlv3_q4_0.ipynb  webui_CodeLlama_7B_Instruct_GPTQ.ipynb
docs/: news.md  performance.md  pypi.md
env_examples/: .env.13b_example  .env.7b_8bit_example  .env.7b_ggmlv3_q4_0_example  .env.7b_gptq_example
llama2_wrapper/: __init__.py  model.py  types.py
llama2_wrapper/download/: __main__.py
llama2_wrapper/server/: __main__.py  app.py
prompts/: prompts_en.csv  utils.py
tests/: test_get_prompt.py
